--- a/path2json/gradle.properties
+++ b/path2json/gradle.properties
@@ -1,4 +1,4 @@
-packageUrl = 'https://github.com/siakhooi/groovycli-path2json'
+packageUrl = 'https://github.com/siakhooi/path2json'
 packageDistribution = https://siakhooi.github.io/apt
 packageMaintainer = 'Siak Hooi <siakhooi@gmail.com>'
 packageUploaders = 'Siak Hooi <siakhooi@gmail.com>'
